--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
         <!-- Facebook -->
         <a
-          href="https://facebook.com/namabisnis"
+          href="https://www.facebook.com/share/1AKL3HKBRq/"
           target="_blank"
           class="social-btn facebook-btn"
         >
@@ -498,7 +498,7 @@
 
         <!-- TikTok -->
         <a
-          href="https://www.tiktok.com/@namabisnis"
+          href="https://www.tiktok.com"
           target="_blank"
           class="social-btn tiktok-btn"
         >
