--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 
         <!-- TikTok -->
         <a
-          href="https://www.tiktok.com"
+          href="https://www.tiktok.com/@rahelperabotan?_r=1&_t=ZS-915HCQrWo33"
           target="_blank"
           class="social-btn tiktok-btn"
         >
@@ -506,7 +506,7 @@
             src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png"
             alt="TikTok"
           />
-          @meubelrachel
+          @rahelperabotan
         </a>
       </div>
     </section>
